[package]
name = "phomemo-print"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = ["bluetoothd", "rfcomm"] }
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.98"
image = "0.25.6"
futures = "0.3.31"